<package>
  <name>cram_motion_manager</name>
  <version>0.2.1</version>

  <description>

     Generic interface for motion managers (e.g., moveit, giskard), to be used in manipulation process modules.

  </description>
  <author>Mihai Pomarlan</author>
  <maintainer email="blandc@cs.uni-bremen.de">Mihai Pomarlan</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/cram_motion_manager</url>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>cram_language</build_depend>
  <build_depend>cram_designators</build_depend>
  <build_depend>cram_plan_failures</build_depend>
  <build_depend>cram_prolog</build_depend>
  <build_depend>cram_utilities</build_depend>
  <build_depend>cram_moveit</build_depend>
  
  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>cram_language</run_depend>
  <run_depend>cram_designators</run_depend>
  <run_depend>cram_plan_failures</run_depend>
  <run_depend>cram_prolog</run_depend>
  <run_depend>cram_utilities</run_depend>
  <run_depend>cram_moveit</run_depend>

</package>
